--- a/dataRand_front-end/package.json
+++ b/dataRand_front-end/package.json
@@ -12,6 +12,8 @@
     "@fontsource/inter": "^5.2.8",
     "@fontsource/space-grotesk": "^5.2.10",
     "@hookform/resolvers": "^3.10.0",
+    "@privy-io/react-auth": "^3.12.0",
+    "@privy-io/wagmi": "^4.0.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -60,6 +62,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "wagmi": "^3.4.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
