--- a/dataRand_front-end/package.json
+++ b/dataRand_front-end/package.json
@@ -51,10 +51,12 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.29.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next": "16.1.4",
     "next-themes": "^0.4.6",
+    "permissionless": "^0.2.57",
     "react": "19.2.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.2.3",
