--- a/back-end/fly.toml
+++ b/back-end/fly.toml
@@ -1,45 +1,23 @@
-app = "datarand-backend"
-primary_region = "lax"
+# fly.toml app configuration file generated for datarand on 2026-02-12T19:36:23Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'datarand'
+primary_region = 'iad'
 
 [build]
-  dockerfile = "Dockerfile"
 
-[env]
-  PORT = "8080"
-
-[deploy]
-  release_command = ""
-
-[[services]]
-  http_checks = []
+[http_service]
   internal_port = 8080
-  processes = ["app"]
-  protocol = "tcp"
-
-  [[services.conditions]]
-    http_checks = []
-    interval = "10s"
-    path = "/health"
-    process = "app"
-    protocol = "http"
-    timeout = "2s"
-
-  [[services.ports]]
-    force_https = true
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-
-  [[services.probes]]
-    failure_threshold = 3
-    interval = "10s"
-    process = "app"
-    success_threshold = 1
-    timeout = "2s"
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-  size = "shared-cpu-1x"
-  memory = "512"
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
