fix: update render.yaml to use npm and ensure express-rate-limit is installed

--- a/back-end/render.yaml
+++ b/back-end/render.yaml
@@ -3,7 +3,8 @@ services:
     name: datarand-backend
     env: node
     region: oregon
-    buildCommand: npm install -g pnpm && pnpm install --frozen-lockfile
+    rootDir: back-end
+    buildCommand: npm install
     startCommand: node src/index.js
     autoDeploy: true
     envVars:
