--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     region: oregon
     rootDir: back-end
-    buildCommand: npm install
+    buildCommand: npm install -g pnpm && pnpm install --no-frozen-lockfile
     startCommand: node src/index.js
     autoDeploy: true
     envVars:
