--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -11,15 +11,18 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 PRIVY_APP_ID=cmksqsb320160la0ctx0h7ypq
 PRIVY_APP_SECRET=your-privy-app-secret
 
-# Blockchain
-INFURA_API_KEY=your-infura-api-key
-DEPLOYER_PRIVATE_KEY=0xyour-private-key
+# Blockchain - Arbitrum Sepolia
 TASK_ESCROW_CONTRACT_ADDRESS=0xF3f0AbF7B633155fd299d0fDdF7977AeE5B7cF34
 PLATFORM_WALLET_ADDRESS=0x689eDE41494F0B0C4d04584F73AFA2c4a6AE3D57
+DEPLOYER_PRIVATE_KEY=0xyour-private-key
+JSON_RPC_PROVIDER=https://arb-sepolia.g.alchemy.com/v2/YOUR_ALCHEMY_KEY
+ARBISCAN_API_KEY=your-arbiscan-api-key
 
 # JWT
 JWT_SECRET=your-super-secret-jwt-key
 
-# Redis for BullMQ (use Upstash for Railway)
-REDIS_HOST=your-redis-host
+# Redis (Upstash for production)
 REDIS_PORT=6379
+REDIS_URL=redis://default:your-password@your-redis-host:6379
+UPSTASH_REDIS_REST_URL=https://your-redis.upstash.io
+UPSTASH_REDIS_REST_TOKEN=your-upstash-token
